classDiagram
    direction LR

    class BoardCore {
        - int _rows = 5
        - int _cols = 9
        - Card[,] _board

        + Vector2Int StartPos
        + List~Vector2Int~ GoalPos
        + List~Vector2Int~ ValidSlots
        + List~Vector2Int~ OnBoardPaths

        + GenerateBoard()
        + PlacePathCardAt(Card, Vector2Int)
        + DropCardOntoBoard(Card)
        + GetValidSlotsForCard(Card)
        + IsValidSlot(Card, Vector2Int)

        + ShowThisGoalCard(Vector2Int slot, Transform showTarget, bool isTressure, bool revealCardData)
        + GetPathsToHiddenGoals()
        + OpenHiddenGoalCard(GoalTracer, bool)
        + BombThisPath(Vector2Int)
        + SwapGoals(Vector2Int slotA, Vector2Int slotB)
    }

    class Card {
        + CardType
        + PathCardType
        + bool[] Connections
        + SetData()
        + Refresh()
        + HighlightForPath()
    }

    class GoalTracer {
        + Vector2Int GoalSlot
        + List~Vector2Int~ Path
    }

    BoardCore --> Card
    BoardCore --> GoalTracer
